--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bower": "^1.7.9",
     "grunt": "^0.4.1",
     "grunt-autoprefixer": "^0.7.3",
+    "grunt-cli": "^1.2.0",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-concat": "^0.4.0",
