clean target is modified. try to link between two docker containers test1

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -23,11 +23,14 @@ http {
   server_names_hash_bucket_size 128; # this seems to be required for some vhosts
 
   server { # simple reverse-proxy
+
     listen       80;
     server_name   localhost;
     include    /etc/nginx/mime.types;
 
     location / {
+        add_header Access-Control-Allow-Origin '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         root   /app;
         index  index.html index.htm;
         try_files $uri$args $uri$args/ $uri $uri/ /index.html =404;
